--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -60,8 +60,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
-          asset_path: "wallguard_${{ env.VERSION }}.deb"
-          asset_name: "wallguard_${{ env.VERSION }}.deb"
+          asset_path: "wallguard_${{ env.VERSION }}_amd64.deb"
+          asset_name: "wallguard_${{ env.VERSION }}_amd64.deb"
           asset_content_type: application/octet-stream
 
   build-windows-and-release:
@@ -193,6 +193,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
-          asset_path: "wallguard_${{ env.VERSION }}.pkg"
-          asset_name: "wallguard_${{ env.VERSION }}.pkg"
+          asset_path: "wallguard-${{ env.VERSION }}.pkg"
+          asset_name: "wallguard-${{ env.VERSION }}.pkg"
           asset_content_type: application/octet-stream
