--- a/wallguard/Cargo.toml
+++ b/wallguard/Cargo.toml
@@ -38,6 +38,7 @@ captis = "0.6.1"
 
 [target.'cfg(windows)'.dependencies]
 is_elevated = "0.1.2"
+winapi = {version = "0.3.9", features = ["winerror", "iphlpapi", "handleapi", "tlhelp32"]}
 
 [target.'cfg(unix)'.dependencies]
 nix = { version = "0.30.1", features = ["user"] }
