HTTP services info gathering

--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -30,8 +30,6 @@ actix-cors = "0.7.1"
 actix-ws = "0.3.0"
 
 futures-util = "0.3.31"
-rustls = "0.23.27"
-tokio-rustls = "0.26.2"
 webpki-roots = "1.0.0"
 hyper = { version = "1.6.0", features = [ "client", "http1", "http2" ] }
 hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1"] }
@@ -45,8 +43,10 @@ prost.workspace = true
 tonic.workspace = true
 tokio.workspace = true
 serde.workspace = true
+rustls.workspace = true
 serde_json.workspace = true
 nullnet-liberror.workspace = true
+tokio-rustls.workspace = true
 
 russh = "0.55.0"
 webrtc = "0.14.0"
