--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,11 @@ members = [
 tokio = { version = "1.43.0", features = ["full"] }
 tonic = { version = "0.13.1", features = ["_tls-any", "tls-native-roots"] }
 prost = "0.13.5"
+rustls = "0.23.27"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 nullnet-liberror = "0.1.1"
+tokio-rustls = "0.26.2"
 
 [profile.release]
 opt-level = "z"
