--- a/wallguard-common/Cargo.toml
+++ b/wallguard-common/Cargo.toml
@@ -10,6 +10,7 @@ tokio.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 nullnet-liberror.workspace = true
+rustls.workspace = true
 
 bincode = "1.3.3"
 get_if_addrs = "0.5.3"
