--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -55,6 +55,7 @@ rmcp = { version = "0.11.0", features = [
     ] }
 tokio-util = "0.7.17"
 axum = "0.8.6"
+cfg-if = "1.0.4"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 pingora = {version = "0.6.0", features = ["proxy", "openssl"] }
