--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -56,6 +56,7 @@ rmcp = { version = "0.11.0", features = [
 tokio-util = "0.7.17"
 axum = "0.8.6"
 cfg-if = "1.0.4"
+async-trait = "0.1.89"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 pingora = {version = "0.6.0", features = ["proxy", "openssl"] }
